# nonlinear-control

./: README.md
ros2/jetcobot_src/MyCobotCppLib/src/mycobot/: MyCobot.cpp
ros2/jetcobot_src/jetcobot_calibration/: package.xml  setup.cfg  setup.py
ros2/jetcobot_src/jetcobot_calibration/jetcobot_calibration/: cali_joints.ipynb
ros2/jetcobot_src/jetcobot_ctrl/jetcobot_ctrl/: compute_check.py  hardcoded_move_object.py  inverse_kinematics_solver.py  read_angles.py  read_coords.py  send_data_tutorial.py
ros2/jetcobot_src/mycobot_cpp_package/: CMakeLists.txt
ros2/jetcobot_src/mycobot_cpp_package/src/: joint_limit.cpp  mycobot_motion.cpp  mycobot_pd_main.cpp
ros2/jetcobot_src/mycobot_velocity_jog/: package.xml  setup.cfg  setup.py
ros2/jetcobot_src/mycobot_velocity_jog/mycobot_velocity_jog/: velocity_jog_node.py
src/: .colconignore
src/MyCobotCppLib/include/: MyCobot.hpp
src/MyCobotCppLib/src/: MyCobot.cpp
src/jetcobot_calibration/jetcobot_calibration/: cali_gripper.ipynb
src/jetcobot_ctrl/: package.xml  setup.cfg  setup.py
src/jetcobot_ctrl/jetcobot_ctrl/: ctrl_coords.ipynb  gripper.py  send_coords_tutorial.py
src/mycobot_cpp_package/: package.xml
src/mycobot_cpp_package/include/mycobot_cpp_package/: pd_controller.hpp
src/mycobot_cpp_package/src/: gripper_only.cpp  jog_j1_until.cpp
